@@ -8,6 +8,7 @@ ikiwiki (3.03) UNRELEASED; urgency=low
     config settings.
   * comments: If comment content checks fail, store the comment
     (in .ikiwiki/comments_pending) for moderator review.
+  * comments: Add a moderation web interface.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 18 Jan 2009 14:50:57 -0500
 
